fixed spacing for mobile

--- a/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.css
+++ b/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.css
@@ -10,3 +10,7 @@
     padding: var(--a-spacing-3) var(--a-spacing-5);
     margin-bottom: var(--a-spacing-7);
 }
+
+.container {
+    margin: 0 var(--a-spacing-3);
+}
